# diet-in-a-box

./: docker-compose.yaml
backend/: .env.example  .eslintrc.json  .gitignore  README.md  clean.ts  package-lock.json  package.json  seed.ts  server.ts  tsconfig.json
backend/app/controllers/: auth.ts  auth.validate.ts  profile.ts  profile.validate.ts  users.ts  users.validate.ts
backend/app/middleware/: auth.ts  db.ts  emailer.ts  utils.ts
backend/app/models/: forgotPassword.ts  index.ts  user.ts  userAccess.ts
backend/app/routes/: auth.ts  index.ts  profile.ts  users.ts
backend/config/: mongo.ts  passport.ts
backend/src/api/product/: index.ts
backend/test/: auth.ts  profile.ts  users.ts
backend/views/: index.html
frontend/: Dockerfile
frontend/data/conf.d/: default.conf
frontend/src/components/DietSchedule/: DailyDiet.tsx  DailyMeal.tsx  DietSchedule.tsx  MealInput.tsx
frontend/src/components/MealDetails/: IngredientList.tsx
frontend/src/models/: dailyDiet.ts
frontend/src/rest/: dailyDietMutation.ts  dailyDietQueries.ts  dietQueries.ts  index.ts
frontend/src/views/: AdminPanelView.tsx  DietListView.tsx  DietView.tsx
ios/diet-in-a-box/diet-in-a-box/: AppDelegate.swift  ContentView.swift
ios/diet-in-a-box/diet-in-a-box.xcodeproj/: project.pbxproj
recommendations/: .gitignore  app.py  config.py  pyproject.toml
recommendations/data/: daily_meals.pickle
recommendations/train/: requirements.txt  train.py
reverseproxy/: Dockerfile
reverseproxy/data/: nginx.conf
testing/: meals.robot  package.json  performance_analysis.js
(+6 files in other folders)
