[tool.poetry]
name = "recommendations"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^0.22.1"
numpy = "^1.18.1"
flask = "^1.1.1"
webargs = "^5.5.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
